<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Splash Screen -->

    <!-- Login and SignUp Screen -->
    <string name="login">Login</string>
    <string name="sign_up">Create Account</string>
    <string name="login_email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_pass_code">Forgot password?</string>
    <string name="confirm_pass">confirm password</string>
    <string name="email">E-mal</string>
    <string name="birth_day">Birth Day</string>
    <string name="full_name">Full name</string>

    <!-- Home Screen -->
    <string name="home_tittle">Delicious food for you</string>
    <string name="search">Search</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="see_more">See more</string>

    <!--Spicy Chiecrns Screen-->
    <string name="found">Found</string>
    <string name="results">results</string>

    <!--    My profile-->
    <string name="my_profile_information">Information</string>
    <string name="my_profile_payment_method">Payment Method</string>
    <string name="my_profile_name">Marvis Ighedosa</string>
    <string name="my_profile_email">dosamarvis@gmail.com</string>
    <string name="my_profile_address">No 15 uti street of ovie palace road efurun delta state</string>
    <string name="my_profile_radioButton_card">Card</string>
    <string name="my_profile_radioButton_bank_account">Bank account</string>
    <string name="my_profile_radioButton_paypal">Paypal</string>
    <string name="my_profile_button_update">Update</string>

    <!--    Food Information-->
    <string name="food_information_title">Veggie tomato mix</string>
    <string name="food_information_title1">Delivery info</string>
    <string name="food_information_title3">Delivered between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="food_information_title2">Return policy</string>

    <!--    Check out Screen-->
    <string name="check_out_title">Delivery</string>
    <string name="check_out_title1">Address details</string>
    <string name="check_out_title2">Delivery method.</string>
    <string name="check_out_change">change</string>
    <string name="check_out_radiobutton1">Door delivery</string>
    <string name="check_out_radiobutton2">Pick up</string>
    <string name="check_out_button">Proceed to payment</string>
    <string name="check_out_total">Total</string>

    <!--Check out payment Screen-->
    <string name="check_out_payment_title">Payment</string>
    <string name="check_out_payment_title1">Payment method</string>
    <string name="check_out_payment_card">@string/my_profile_radioButton_card</string>
    <string name="check_out_payment_bank_account">@string/my_profile_radioButton_bank_account</string>


    <!--    Cart Screen-->
    <string name="cart_delete">swipe on an item to delete</string>
    <string name="cart_button">Complete order</string>

    <!--History Screen-->
    <string name="history_tv_1">No history yet</string>
    <string name="history_tv_2">Hit the orange button down below to Create an order</string>
    <string name="history_button">Start ordering</string>

    <!--    Orders-->
    <string name="orders_tv_1">No orders yet</string>
    <string name="orders_tv_2">Hit the orange button down below to Create an order</string>

    <!--    My Profile 2 Screen-->
    <string name="my_profile_2_title">My profile</string>
    <string name="my_profile_2_title1">Personal details</string>
    <string name="my_profile_2_orders">Orders</string>
    <string name="my_profile_2_Pending_reviews">Pending reviews</string>
    <string name="my_profile_2_Faq">Faq</string>
    <string name="my_profile_2_Help">Help</string>
    <string name="my_profile_2_change">change</string>


    <!--    Item not found Screen-->
    <string name="item_not_found_title">Item not found</string>
    <string name="item_not_found_title1">Try searching the item with a different keyword.</string>

    <!--    No internet Screen-->
    <string name="no_internet_title">No internet Connection</string>
    <string name="no_internet_title1">Your internet connection is currently not available please check or try again.</string>
    <string name="no_internet_btn_try_again">Try again</string>

    <!--    No Offers Screen-->
    <string name="no_offers_title">My offers</string>
    <string name="no_offers_title1">ohh snap! No offers yet</string>
    <string name="no_offers_title2">Bella dose’t have any offers yet please check again.</string>

    <!--    Please note Screen-->
    <string name="please_note_title">Please note</string>
    <string name="please_note_cancel">Cancel</string>
    <string name="please_note_proceed">Proceed</string>

    <!--    Favorite Screen-->
    <string name="favorite_title">No Favorite Yet</string>
    <string name="favorite">favorite</string>

    <!--    Drawer menu -->
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="offer_and_promo">Offer and promo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="security">Security</string>
    <string name="sign_out">Sign-out</string>

    <!--Progress dialog-->
    <string name="logging_msg">logging…</string>

    <!--Error dialog-->
    <string name="error_title_error">Error</string>
    <string name="error_title_warning">Warning</string>
    <string name="error_title_info">Info</string>
    <string name="error_message">Error message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>