<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.its.food.delivery.ui.main.home.HomeViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.home.HomeFragment"
            android:background="@color/Background">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/home_title_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/home_title_margin_left"
                android:layout_marginLeft="@dimen/home_title_margin_left"
                android:layout_marginTop="@dimen/home_title_margin_top"
                android:text="@string/home_tittle"
                android:textAppearance="@style/Overlay.Home.Title1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_editTextSearch_height"
                android:layout_marginStart="@dimen/home_editTextSearch_margin"
                android:layout_marginLeft="@dimen/home_editTextSearch_margin"
                android:layout_marginTop="@dimen/home_editTextSearch_margin_top"
                android:layout_marginEnd="@dimen/home_editTextSearch_margin"
                android:layout_marginRight="@dimen/home_editTextSearch_margin"
                android:background="@drawable/shape_rectangle_while3"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:drawablePadding="20dp"
                android:imeOptions="actionSend"
                android:hint="@string/search"
                android:inputType="text"
                android:padding="@dimen/home_editTextSearch_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_tabLayout_margin_left"
                android:layout_marginTop="@dimen/home_tabLayout_margin_top"
                android:background="@color/Background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
                app:tabGravity="start"
                app:tabMode="scrollable">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foods" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drinks" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snacks" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/txtSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_see_more_margin_top"
                android:layout_marginRight="@dimen/home_see_more_margin_right"
                android:text="@string/see_more"
                android:textAppearance="@style/Overlay.Home.Title2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/home_RecyclerView_margin_left"
                android:layout_marginLeft="@dimen/home_RecyclerView_margin_left"
                android:layout_marginTop="@dimen/home_RecyclerView_margin_top"
                android:orientation="horizontal"
                android:padding="20dp"
                tools:listitem="@layout/food_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSeeMore" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>