<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.no_offers.NoOffersActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMyOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_vector_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/no_offers_margin_50"
        android:layout_marginEnd="@dimen/no_offers_margin_50"
        android:layout_marginTop="@dimen/no_offers_margin_20"
        android:text="@string/no_offers_title"
        android:textAppearance="@style/Overlay.no_offers.title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMyOffers" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/no_offers_margin_30"
            android:layout_marginTop="@dimen/no_offers_margin_200"
            android:layout_marginEnd="@dimen/no_offers_margin_30"
            android:gravity="center"
            android:text="@string/no_offers_title1"
            android:textAppearance="@style/Overlay.no_offers.title1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/no_offers_margin_50"
            android:layout_marginTop="@dimen/no_offers_margin_20"
            android:layout_marginEnd="@dimen/no_offers_margin_50"
            android:gravity="center"
            android:text="@string/no_offers_title2"
            android:textAppearance="@style/Overlay.history.text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />


</androidx.constraintlayout.widget.ConstraintLayout>