<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/please_note_image_frame_height"
        android:background="@color/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/please_note_margin_20"
        android:layout_marginEnd="@dimen/please_note_margin_20"
        android:text="@string/please_note_title"
        android:textAppearance="@style/Overlay.please_note.title"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewNoteFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/please_note_margin_20"
        android:layout_marginTop="@dimen/please_note_margin_10"
        android:layout_marginEnd="@dimen/please_note_margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/please_note_btn_height"
        android:layout_marginStart="@dimen/please_note_margin_20"
        android:layout_marginTop="@dimen/please_note_margin_20"
        android:layout_marginEnd="@dimen/please_note_margin_20"
        android:text="@string/please_note_proceed"
        android:textAppearance="@style/Overlay.please_note.title1"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/recyclerviewNoteFood" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="@dimen/please_note_btn_cancel_width"
        android:layout_height="@dimen/please_note_btn_height"
        android:layout_marginStart="@dimen/please_note_margin_20"
        android:layout_marginLeft="@dimen/please_note_margin_20"
        android:layout_marginTop="@dimen/please_note_margin_20"
        android:gravity="center_vertical"
        android:text="@string/please_note_cancel"
        android:textAppearance="@style/Overlay.please_note.title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerviewNoteFood" />


</androidx.constraintlayout.widget.ConstraintLayout>